@@ -1,6 +1,8 @@
 package com.zerobase.hoops.reports.service;
 
 import com.zerobase.hoops.alarm.service.NotificationService;
+import com.zerobase.hoops.alarm.domain.NotificationType;
+import com.zerobase.hoops.alarm.service.NotificationService;
 import com.zerobase.hoops.entity.ReportEntity;
 import com.zerobase.hoops.entity.UserEntity;
 import com.zerobase.hoops.exception.CustomException;
@@ -11,10 +13,10 @@ import com.zerobase.hoops.reports.repository.ReportRepository;
 import com.zerobase.hoops.security.JwtTokenExtract;
 import com.zerobase.hoops.users.repository.UserRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
@@ -29,26 +31,32 @@ public class ReportService {
   private final NotificationService notificationService;
 
   public String reportContents(String reportId) {
+    log.info("reportContents 시작");
     ReportEntity reportEntity = reportRepository.findById(
         Long.valueOf(reportId)).orElseThrow(
         () -> new CustomException(ErrorCode.NOT_EXIST_REPORTED)
     );
+    log.info("reportContents 종료");
     return reportEntity.getContent();
   }
 
-  public List<ReportListResponseDto> reportList(int page, int size) {
+  public Page<ReportListResponseDto> reportList(int page, int size) {
+    log.info("reportList 시작");
     Page<ReportEntity> reportPage = reportRepository.findByBlackListStartDateTimeIsNull(
         PageRequest.of(page, size));
-    List<ReportEntity> reportList = reportPage.getContent();
-
-    return reportList.stream().map(ReportListResponseDto::of)
-        .collect(Collectors.toList());
+    List<ReportListResponseDto> reportList = reportPage.getContent()
+        .stream()
+        .map(ReportListResponseDto::of)
+        .toList();
+    log.info("reportList 종료");
+    return new PageImpl<>(reportList, reportPage.getPageable(),
+        reportPage.getTotalElements());
   }
 
   public void reportUser(ReportDto request) {
-
+    log.info("reportUser 시작");
     UserEntity user = userRepository.findById(
-            jwtTokenExtract.currentUser().getUserId())
+            jwtTokenExtract.currentUser().getId())
         .orElseThrow(() -> new CustomException(
             ErrorCode.USER_NOT_FOUND));
 
@@ -59,14 +67,21 @@ public class ReportService {
 
     checkExist(request, user);
 
-    notificationService.send(findManger(), "신고가 접수되었습니다.");
-
+    notificationService.send(NotificationType.REPORT, findManger(),
+        user.getNickName() + "에게서 신고가 접수되었습니다.");
     reportRepository.save(request.toEntity(user, reportedUser));
+    log.info(
+        String.format(
+            "[user_login_id] = %s = / [reported_user_login_id] = %s 신고완료",
+            user.getLoginId(),
+            reportedUser.getLoginId()
+        ));
+    log.info("reportUser 종료");
   }
 
   private void checkExist(ReportDto request, UserEntity user) {
-    boolean existReported = reportRepository.existsByUser_UserIdAndReportedUser_UserId(
-        user.getUserId(), request.getReportedUserId());
+    boolean existReported = reportRepository.existsByUser_IdAndReportedUser_Id(
+        user.getId(), request.getReportedUserId());
   }
 
   private UserEntity findManger() {
